@startuml

title __SERVER's Class Diagram__\n


    namespace l.edu.uj.ii.ionb.airportmanager.web.rest.server {
      class pl.edu.uj.ii.ionb.airportmanager.web.rest.server.AirplaneRestApi {
          {static} - APP_CONF : XmlWebApplicationContext
          - context : ServletContext
          - mapper : ObjectMapper
          + AirplaneRestApi()
          + deletePlane()
          + getAirplane()
          + getAirplanesFlights()
          + getAllAirplanes()
          + postPlane()
          + putPlane()
          - destroyAfterRequest()
          - initBeforeRequest()
      }
    }

  


    namespace l.edu.uj.ii.ionb.airportmanager.web.rest.server {
      class pl.edu.uj.ii.ionb.airportmanager.web.rest.server.DestinationRestApi {
          {static} ~ authentication : Authentication
          {static} - APP_CONF : XmlWebApplicationContext
          - context : ServletContext
          - mapper : ObjectMapper
          + DestinationRestApi()
          + createDestination()
          + deleteDestination()
          + getAllDestinations()
          + getDestination()
          + getIncomingFlights()
          + getOutcomintFlights()
          + updateDestination()
          - destroyAfterRequest()
          - initBeforeRequest()
      }
    }

  

  pl.edu.uj.ii.ionb.airportmanager.web.rest.server.AirplaneRestApi o-- pl.edu.uj.ii.ionb.airportmanager.services.AirplaneService : airService
  pl.edu.uj.ii.ionb.airportmanager.web.rest.server.DestinationRestApi o-- pl.edu.uj.ii.ionb.airportmanager.services.DestinationService : destService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
